--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,7 @@
     <string name="theme_dark_mode">Dark Mode</string>
     <string name="theme_system_mode_light">System Mode: Light</string>
     <string name="theme_system_mode_dark">System Mode: Dark</string>
+    <string name="btn_custom_views">Custom Views</string>
+    <string name="title_activity_custom_views">CustomViews</string>
+    <string name="txt_emoji_kaleidoscope">Emoji Kaleidoscope</string>
 </resources>
